
[TestDashboardView_ContextMenuActions/path - 1]
TestDashboardView_ContextMenuActions/path
{
  "Views": [
    {
      "Type": "*views.DashboardView",
      "Data": {
        "Type": "DashboardView",
        "FilterMode": false,
        "FilterQuery": "",
        "ItemCount": 1,
        "SelectedIndex": 0,
        "HasError": false
      }
    },
    {
      "Type": "*views.ContextMenuView",
      "Data": {
        "Type": "ContextMenuView",
        "Handle": "test-ws",
        "Items": [
          {
            "Key": "i",
            "Label": "Inspect",
            "Desc": "Show workspace details"
          },
          {
            "Key": "p",
            "Label": "Path",
            "Desc": "Copy path to clipboard"
          },
          {
            "Key": "e",
            "Label": "Exec",
            "Desc": "Run command in repositories"
          },
          {
            "Key": "a",
            "Label": "Add Repo",
            "Desc": "Add repository to workspace"
          },
          {
            "Key": "d",
            "Label": "Remove Repo",
            "Desc": "Remove repository"
          },
          {
            "Key": "u",
            "Label": "Update",
            "Desc": "Change workspace purpose"
          },
          {
            "Key": "r",
            "Label": "Remove",
            "Desc": "Delete workspace (confirm)"
          }
        ],
        "SelectedKey": "i",
        "Stale": false
      }
    },
    {
      "Type": "*views.modal_PathView",
      "Data": {
        "Type": "PathView",
        "Handle": "test-ws",
        "Path": "/test/path/to/workspace",
        "Copied": false
      }
    }
  ]
}
---

[TestDashboardView_ContextMenuActions/exec - 1]
TestDashboardView_ContextMenuActions/exec
{
  "Views": [
    {
      "Type": "*views.DashboardView",
      "Data": {
        "Type": "DashboardView",
        "FilterMode": false,
        "FilterQuery": "",
        "ItemCount": 1,
        "SelectedIndex": 0,
        "HasError": false
      }
    },
    {
      "Type": "*views.ContextMenuView",
      "Data": {
        "Type": "ContextMenuView",
        "Handle": "test-ws",
        "Items": [
          {
            "Key": "i",
            "Label": "Inspect",
            "Desc": "Show workspace details"
          },
          {
            "Key": "p",
            "Label": "Path",
            "Desc": "Copy path to clipboard"
          },
          {
            "Key": "e",
            "Label": "Exec",
            "Desc": "Run command in repositories"
          },
          {
            "Key": "a",
            "Label": "Add Repo",
            "Desc": "Add repository to workspace"
          },
          {
            "Key": "d",
            "Label": "Remove Repo",
            "Desc": "Remove repository"
          },
          {
            "Key": "u",
            "Label": "Update",
            "Desc": "Change workspace purpose"
          },
          {
            "Key": "r",
            "Label": "Remove",
            "Desc": "Delete workspace (confirm)"
          }
        ],
        "SelectedKey": "i",
        "Stale": false
      }
    },
    {
      "Type": "*views.modal_ExecView",
      "Data": {
        "Type": "ExecView",
        "Handle": "test-ws",
        "Command": "",
        "Done": false,
        "RepoCount": 1
      }
    }
  ]
}
---

[TestDashboardView_ContextMenuActions/update_purpose - 1]
TestDashboardView_ContextMenuActions/update_purpose
{
  "Views": [
    {
      "Type": "*views.DashboardView",
      "Data": {
        "Type": "DashboardView",
        "FilterMode": false,
        "FilterQuery": "",
        "ItemCount": 1,
        "SelectedIndex": 0,
        "HasError": false
      }
    },
    {
      "Type": "*views.ContextMenuView",
      "Data": {
        "Type": "ContextMenuView",
        "Handle": "test-ws",
        "Items": [
          {
            "Key": "i",
            "Label": "Inspect",
            "Desc": "Show workspace details"
          },
          {
            "Key": "p",
            "Label": "Path",
            "Desc": "Copy path to clipboard"
          },
          {
            "Key": "e",
            "Label": "Exec",
            "Desc": "Run command in repositories"
          },
          {
            "Key": "a",
            "Label": "Add Repo",
            "Desc": "Add repository to workspace"
          },
          {
            "Key": "d",
            "Label": "Remove Repo",
            "Desc": "Remove repository"
          },
          {
            "Key": "u",
            "Label": "Update",
            "Desc": "Change workspace purpose"
          },
          {
            "Key": "r",
            "Label": "Remove",
            "Desc": "Delete workspace (confirm)"
          }
        ],
        "SelectedKey": "i",
        "Stale": false
      }
    },
    {
      "Type": "*views.modal_UpdateView",
      "Data": {
        "Type": "UpdateView",
        "Handle": "test-ws",
        "Purpose": ""
      }
    }
  ]
}
---

[TestDashboardView_ContextMenuActions/remove_confirm - 1]
TestDashboardView_ContextMenuActions/remove_confirm
{
  "Views": [
    {
      "Type": "*views.DashboardView",
      "Data": {
        "Type": "DashboardView",
        "FilterMode": false,
        "FilterQuery": "",
        "ItemCount": 1,
        "SelectedIndex": 0,
        "HasError": false
      }
    },
    {
      "Type": "*views.ContextMenuView",
      "Data": {
        "Type": "ContextMenuView",
        "Handle": "test-ws",
        "Items": [
          {
            "Key": "i",
            "Label": "Inspect",
            "Desc": "Show workspace details"
          },
          {
            "Key": "p",
            "Label": "Path",
            "Desc": "Copy path to clipboard"
          },
          {
            "Key": "e",
            "Label": "Exec",
            "Desc": "Run command in repositories"
          },
          {
            "Key": "a",
            "Label": "Add Repo",
            "Desc": "Add repository to workspace"
          },
          {
            "Key": "d",
            "Label": "Remove Repo",
            "Desc": "Remove repository"
          },
          {
            "Key": "u",
            "Label": "Update",
            "Desc": "Change workspace purpose"
          },
          {
            "Key": "r",
            "Label": "Remove",
            "Desc": "Delete workspace (confirm)"
          }
        ],
        "SelectedKey": "i",
        "Stale": false
      }
    },
    {
      "Type": "*views.modal_RemoveView",
      "Data": {
        "Type": "RemoveView",
        "Handle": "test-ws",
        "Done": false,
        "Confirm": false
      }
    }
  ]
}
---
